# xiaotie

./: .gitignore  .pre-commit-config.yaml  BUILTIN_PROXY_INTEGRATION_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  FINAL_OPTIMIZATION_REPORT.md  FINAL_TEST_REPORT.md  FIX_REPORT.md  LICENSE  MACOS_AUTOMATION_REPORT.md  Makefile  Mini-Agent-学习笔记.md  OPTIMIZATION_REPORT.md  OPTIMIZATION_REPORT_P1P2.md  PROJECT_SUMMARY.md  README.md  README.zh-CN.md  README_EN.md  SCRAPER_INTEGRATION_REPORT.md  TEST_RESULTS.md  VERIFICATION_REPORT.md  demo_comprehensive.py  final_verification.py  mkdocs.yml  performance_test.py  pyproject.toml  test_charles.py
.claude/: ralph-loop.local.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  daily-smoke.yml  release.yml
benchmarks/: agent_perf_benchmark.py  baseline.json  performance_test.py
benchmarks/results/: latest.json  performance-gate-report.json  performance-gate-report.md
config/: config.yaml.example  system_prompt.md
deployment/: docker-compose.prod.yml  grafana-agent-dashboard.json  otel-collector-config.yaml  prometheus.yml
docs/: CLAUDE.md  api-reference.md  architecture.md  builtin-proxy-guide.md  charles-proxy-guide.md  cognitive-architecture.md  demo.tape  index.md  macos-miniapp-automation-guide.md  macos-wechat-automation.md  minimax-replica-learning-plan.md  modern-agent-refactor-blueprint.md  next-step-delivery-plan.md  ops-runbook.md  production-iteration-plan-2026.md  proxy-architecture.md  proxy-vs-charles.md  scraper-analysis.md  scraper-guide.md  scraper-tool-architecture.md  scraper-vs-competitors.md  sdk-demo.tape  tools.md  tui-demo.tape  v0.10.0-plan.md  v0.11.0-plan.md  v0.3.0-plan.md  v0.9.0-plan.md
docs/api/: agent.md  context.md  decision.md  events.md  kg.md  learning.md  memory.md  multimodal.md  planning.md  reflection.md  rl.md  skills.md  telegram.md
docs/design-system/: xiaotie-component-library.md  xiaotie-interaction-prototype.md  xiaotie-ui-prototype.html  xiaotie-ui-style-guide.md
docs/reports/: ai-assistant-change-analysis-and-optimization-roadmap-2026-03-06.md  codebase-audit.md  competitor-analysis.md  coverage-analysis.md  full-test-and-readiness-report-2026-03-06.md  p2-observability-report.md  p3-security-progress-2026-03-06.md  performance-baseline-v1.md  phase4-qa-report.md  phased-optimization-execution-plan-2026-03-06.md  progress-2026-03-06.md  security-audit-v2.md  telegram-integration-delivery-2026-03-06.md  tui-interactive-tool-delivery-2026-03-06.md  ui-guided-safety-system-2026-03-06.md  ui-upgrade-usability-test-2026-03-06.md  v2-security-architecture.md  v2-technical-blueprint.md
docs/usage/: telegram-integration-guide.md  tui-quickstart.md
examples/: charles_miniapp_capture.py  demo_cognitive_architecture.py  miniapp_auto_capture.py  proxy_miniapp_capture.py  scraper_demo.py
scripts/: check_benchmark_thresholds.py  deploy_prod.sh  setup_local.ps1  setup_local.sh
tests/: conftest.py
tests/integration/: test_agent_workflow.py  test_core_business_smoke.py  test_integration.py  test_proxy_integration.py  test_scraper_integration.py  test_tui_guided_flow.py  test_tui_pilot.py
tests/unit/: test_accessibility.py  test_agent.py  test_agent_architecture.py  test_api_tool.py  test_auth.py  test_base_scraper.py  test_builder.py  test_cache.py  test_charles_tool.py  test_code_analysis.py  test_command_palette.py  test_commands.py  test_comprehensive_integration.py  test_config.py  test_config_watcher.py  test_context_engine.py  test_context_system.py  test_context_window_system.py  test_database.py  test_decision_system.py  test_enhanced_bash.py  test_events.py  test_executor.py  test_git_tool.py  test_i18n.py  test_keybindings.py  test_kg_system.py  test_knowledge_base.py  test_learning_system.py  test_llm.py  test_lsp_protocol.py  test_mcp_protocol.py  test_memory_core.py  test_mimo_client.py  test_multi_agent.py  test_multi_agent_coordinator.py  test_multimodal_system.py  test_onboarding.py  test_orchestrator.py  test_output.py  (+37 more)
xiaotie/: __init__.py  agent.py  api_tool.py  banner.py  builder.py  cache.py  cli.py  commands.py  config.py  config_watcher.py  context_engine.py  custom_commands.py  database.py  db_tool.py  display.py  enhancements.py  events.py  feedback.py  i18n.py  input.py  keybindings.py  knowledge_base.py  logging.py  orchestrator.py  permissions.py  plugins.py  profiles.py  repomap.py  repomap_v2.py  retry.py  retry_v2.py  runtime_setup.py  sandbox.py  sandbox_v2.py  schema.py  secrets.py  session.py  telemetry.py
xiaotie/agent/: __init__.py  architecture.py  config.py  core.py  executor.py  response.py  runtime.py  state.py
xiaotie/automation/: __init__.py  appium_driver.py  miniapp_automation.py
xiaotie/commands/: __init__.py  base.py  custom.py  metrics.py  plugins.py  profiles.py  quality.py  secret_cmd.py  session.py  system.py  workspace.py
xiaotie/context/: __init__.py  core.py  window.py
xiaotie/decision/: __init__.py  core.py
xiaotie/kg/: __init__.py  core.py
xiaotie/learning/: __init__.py  core.py
xiaotie/llm/: __init__.py  anthropic_client.py  base.py  mimo_client.py  openai_client.py  providers.py  wrapper.py
xiaotie/lsp/: __init__.py  client.py  diagnostics.py  manager.py  protocol.py
xiaotie/mcp/: __init__.py  client.py  protocol.py  tools.py  transport.py
xiaotie/memory/: __init__.py  core.py
xiaotie/multi_agent/: __init__.py  agent_tool.py  coordinator.py  roles.py  task_agent.py
xiaotie/multimodal/: __init__.py  core.py
xiaotie/planning/: __init__.py  core.py
xiaotie/proxy/: __init__.py  addons.py  cert_manager.py  proxy_server.py  storage.py
xiaotie/reflection/: __init__.py  core.py
xiaotie/rl/: __init__.py  core.py
xiaotie/scraper/: __init__.py  auth.py  base_scraper.py  output.py  stability.py  threading_utils.py
xiaotie/search/: __init__.py  embeddings.py  semantic_search.py  vector_store.py
xiaotie/skills/: __init__.py  core.py
xiaotie/storage/: __init__.py  database.py  message_store.py  models.py  (+1 more)
(+39 files in other folders)
