[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xiaotie"
version = "0.6.1"
description = "小铁 - 轻量级 AI Agent 框架"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Leo" }
]
keywords = ["ai", "agent", "llm", "claude", "openai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "pydantic>=2.0",
    "tiktoken>=0.7.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "prompt_toolkit>=3.0",
]

[project.optional-dependencies]
tui = [
    "textual>=0.50.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "black>=23.0",
    "ruff>=0.1.0",
]
all = [
    "xiaotie[tui]",
]

[project.scripts]
xiaotie = "xiaotie.cli:main"
xiaotie-tui = "xiaotie.tui.main:run_tui"

[project.urls]
Homepage = "https://github.com/leo/xiaotie"
Documentation = "https://github.com/leo/xiaotie#readme"
Repository = "https://github.com/leo/xiaotie"

[tool.hatch.build.targets.wheel]
packages = ["xiaotie"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
